force-app/main/default/objects/LLC_BI__Review_Loan__c/fields/LLC_BI__Data__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Data__c</fullName>
    <description>This field auto-populates with configurable data when the review is approved. The data is stored in JSON format.</description>
    <label>Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>