force-app/main/default/objects/LLC_BI__Review_Loan__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to lookup to the Loan record that is being included in the Review. This is automatically populated when the review is initiated, and loans are selected for review. This field is not editable on the review record, however it is used in populating the &quot;Loans&quot; and &quot;Relationship&quot; list sections of the review record.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Review Loans</relationshipLabel>
    <relationshipName>Review_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>