force-app/main/default/objects/LLC_BI__Review_Loan__c/fields/LLC_BI__Review__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Review__c</fullName>
    <description>This field is the master-detail, used to specify which review record the loans should be visible on. This field is automatically populated when a review is initiated for the loans. This field is not editable on the review record, however it is used in populating the &quot;Loans&quot; and &quot;Relationship&quot; list sections of the review record.</description>
    <label>Review</label>
    <referenceTo>LLC_BI__Review__c</referenceTo>
    <relationshipLabel>Review Loans</relationshipLabel>
    <relationshipName>Review_Loans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>